# tap-meltanohub

./: LICENSE  README.md  meltano.yml  pyproject.toml  tap-meltanohub.sh  taps.json  tox.ini
.github/workflows/: ci_workflow.yml  test.yml
tap_meltanohub/: client.py  streams.py  tap.py
tap_meltanohub/schemas/: plugins.json  tap.json
tap_meltanohub/tests/: __init__.py  test_core.py
