[tool.poetry]
name = "tap-meltanohub"
version = "0.0.1"
description = "`tap-meltanohub` is a Singer tap for MeltanoHub, built with the Meltano SDK for Singer Taps."
authors = ["AutoIDM"]
keywords = [
    "ELT",
    "MeltanoHub",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.7.1,<3.12"
requests = "^2.25.1"
singer-sdk = "^0.23.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^21.9b0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.25.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-meltanohub = 'tap_meltanohub.tap:TapMeltanoHub.cli'
