[project]
name = "tap-meltanohub"
version = "0.0.1"
description = "`tap-meltanohub` is a Singer tap for MeltanoHub, built with the Meltano SDK for Singer Taps."
authors = [{ name = "AutoIDM" }]
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
license = "Apache-2.0"
keywords = [
    "ELT",
    "MeltanoHub",
]
dependencies = [
    "requests~=2.32",
    "singer-sdk~=0.47.0",
]

[project.scripts]
tap-meltanohub = "tap_meltanohub.tap:TapMeltanoHub.cli"

[dependency-groups]
dev = [
    { include-group = "lint" },
    { include-group = "testing" },
    { include-group = "typing" },
    "tox>=4.22",
    "tox-uv>=1.26.0",
]
lint = [
    "ruff>=0.12.0",
]
testing = [
    "pytest>=8",
    "singer-sdk[testing]",
]
typing = [
    "mypy>=1.16",
    "types-requests>=2.32",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100

[tool.tox]
min_version = "4.22"
requires = [ "tox", "tox-uv" ]
env_list = [
  "lint",
  "typing",
  "3.14",
  "3.13",
  "3.12",
  "3.11",
  "3.10",
]

[tool.tox.env_run_base]
runner = "uv-venv-lock-runner"
dependency_groups = [ "testing" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tap_meltanohub/tests" ], extend = true } ] ]

[tool.tox.env.typing]
dependency_groups = [ "typing" ]
commands = [ [ "mypy", "--strict", { replace = "posargs", default = [ "tap_meltanohub" ], extend = true } ] ]

[tool.tox.env.lint]
dependency_groups = [ "lint" ]
commands = [
    [ "ruff", "check", { replace = "posargs", default = [ "tap_meltanohub" ], extend = true } ],
    [ "ruff", "format", "--check", { replace = "posargs", default = [ "tap_meltanohub" ], extend = true } ],
]
